@@ -26,9 +26,10 @@ version 1.1-rc0 ..-..-2012
         changing delayPerUnit also updates duration
 . [FIX] Actions:
         CCAnimate: fixed low FPS bug, where multiple frames need to be set per 'tick'.
-        CCActionTween: fixed missing copyWithZone
+        CCActionTween: 
+            fixed missing copyWithZone
+             uses keyPath instead of key internally for greater flexibility (issue #1082)
         CCRepeatForever: has a stop method now (issue #945)
-. [FIX] ActionManager: always calls stop on a action that must be removed (issue #945)
 . [FIX] ColorLayer: color and opacity are readwrite (issue #1246)
 . [FIX] Director: 
         exceptions raised in runloop didn't cause program to abort (issue #911)
